--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,10 +1,16 @@
 version: 0.2
-env:
- variables:
-   SOLUTION: .\basic-web-app.sln
-   DOTNET_FRAMEWORK: 4.6.2
 phases:
- build:
-   commands:
-     - '& "C:\ProgramData\chocolatey\bin\NuGet.exe" restore $env:SOLUTION -PackagesDirectory $env:PACKAGE_DIRECTORY'
-     - '& "C:\Program Files (x86)\MSBuild\14.0\Bin\MSBuild.exe" -p:FrameworkPathOverride="C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v$env:DOTNET_FRAMEWORK" $env:SOLUTION'
+  install:
+    runtime-versions:
+      dotnet: 2.2   
+    commands:
+      - dotnet tool install -g Amazon.ElasticBeanstalk.Tools
+  build:
+    commands:
+      - cd deployment-app-csharp
+      - dotnet eb package
+artifacts:
+  files:
+    - ./basic-web-app.sln
+  discard-paths: yes
+  
